Fix issue with white space below about us bg image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,8 +27,7 @@ body {
     padding-bottom: 1.5em;
 }
 
-.header-style h2{
-    text-align: center;
+.header-style h2 {
     margin: auto;
     font-size: 2rem;
 }
@@ -113,12 +112,12 @@ body {
 
 #about-us-container {
     width: 100%;
+    padding-bottom: 0 !important;
 }
 
 #about-us-container p {
     text-align: center;
     font-style: italic;
-    font-weight: 600;
     margin: 1.25rem 9.375rem 1.25rem 9.375rem;
 }
 
@@ -142,13 +141,20 @@ body {
     object-fit: cover;
     clear: both;
     opacity: 2;
-    padding-top: 1rem
+    padding-top: 1rem;
+    padding-bottom: 0;
+    display: block;
 }
 
 /* Our Reasons for Travel */
 
 #reason-container {
-    height: 350px;
+    height: 21.875rem;
+    background-color: #F1ECCE;
+}
+
+#reason-container h2 {
+    ---shadow: inset 0 0 0 10px lightGreen
 }
 
 #reason-container p {
